chore: added favicon and brand icons

--- a/apps/web/src/index.html
+++ b/apps/web/src/index.html
@@ -1,13 +1,27 @@
 <!doctype html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>Web</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-</head>
-<body>
-  <app-root></app-root>
-</body>
+  <head>
+    <meta charset="utf-8" />
+    <title>Web</title>
+    <base href="/" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <link
+      rel="icon"
+      type="image/png"
+      href="./assets/brand-icons/favicon-32x.png"
+    />
+    <link
+      rel="icon"
+      sizes="192x192"
+      href="./assets/brand-icons/icon-192x.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      href="./assets/brand-icons/apple-touch-icon.png"
+    />
+  </head>
+  <body>
+    <app-root></app-root>
+  </body>
 </html>
