chore: render video and channel on server

--- a/apps/web/src/index.html
+++ b/apps/web/src/index.html
@@ -20,6 +20,7 @@
       rel="apple-touch-icon"
       href="./assets/brand-icons/apple-touch-icon.png"
     />
+    <link rel="preconnect" href="https://res.cloudinary.com">
   </head>
   <body>
     <app-root></app-root>
